fixed scrollmation image selection, other fixes: - get image selector from config passed into cms - image spacing fixes in article-left and article-right - responsive image fixes - using different sizes etc - small code clean up in inline_media_editor.js

--- a/src/app/css/_article-right.scss
+++ b/src/app/css/_article-right.scss
@@ -1,11 +1,12 @@
 .section .article-right {
-  img {
+  .article-right-img {
     height: auto;
     width: 100%;
+    margin-bottom: 1.6rem;
   }
   @media screen and (min-width:550px){
     float: right;
-    img {
+  .article-right-img {
       float: left;
       margin-right: 1.6rem;
       margin-bottom: 1.6rem;
