--- a/src/app/css/full/_animations.scss
+++ b/src/app/css/full/_animations.scss
@@ -1,10 +1,10 @@
 .html5 {
   .transition {
-  -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -ms-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    transition: all 1s ease;
+  -webkit-transition: opacity 1s ease;
+    -moz-transition: opacity 1s ease;
+    -ms-transition: opacity 1s ease;
+    -o-transition: opacity 1s ease;
+    transition: opacity 1s ease;
    -webkit-transition-delay: 0.1s;
       transition-delay: 0.1s;
   }
